--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "filepond": "^4.27.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.6.2"
   }
 }
